fixed project images overlapping navbar (by removing relative class)

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   color-scheme: dark;
 }
 
+.navi {
+  z-index: 1001;
+}
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
